[refactoring] 1. extract common task from collab to rootProject 2. move user defined properties to gradle ext properties